--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -93,15 +93,15 @@
     <input type="number" id="tdsInput" name="tdsInput" min="0" step="0.01" required />
     <br><br>
 
-    <label for="nitrogen">Available Nitrogen in soil (kg/ha):</label>
+    <label for="nitrogen">Available Nitrogen in soil (mg/kg):</label>
     <input type="number" id="nitrogen" name="nitrogen" min="0" step="0.01" required />
     <br><br>
 
-    <label for="phosphorous">Available Phosphorous in soil (kg/ha):</label>
+    <label for="phosphorous">Available Phosphorous in soil (mg/kg):</label>
     <input type="number" id="phosphorous" name="phosphorous" min="0" step="0.01" required />
     <br><br>
 
-    <label for="potassium">Available Potassium in soil (kg/ha):</label>
+    <label for="potassium">Available Potassium in soil (mg/kg):</label>
     <input type="number" id="potassium" name="potassium" min="0" step="0.01" required />
     <br><br>
 
