--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -89,7 +89,7 @@
     <input type="number" id="phInput" name="phInput" min="0" max="14" step="0.1" required />
     <br><br>
 
-    <label for="tdsInput">Soil TDS level (ppm):</label>
+    <label for="tdsInput">Soil Moisture Level (analog):</label>
     <input type="number" id="tdsInput" name="tdsInput" min="0" step="0.01" required />
     <br><br>
 
