--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
             <li><a id="forumlink" href="/forum/">Khetu Forum</a></li>
           </ul>
         </li>
-        <li class="right"><a id="hindiButton" href="#">हिंदी में देखें</a></li>
+        <li class="right">
+          <a id="language-dropdown" style="cursor: pointer;">Change language</a>
+          <ul id="language-dropdown-content" class="dropdown-content">
+            <li><a id="hindiButton" href="#">हिंदी में देखें</a></li>
+            <li><a id="bengaliButton" href="#">বাংলায় দেখুন</a></li>
+          </ul>
+        </li>
         <li class="right"><a id="log" data-netlify-identity-button></a></li>
       </ul>
     </nav>
