changed tds to moisture

--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -95,8 +95,8 @@
     <input type="number" id="phInput" name="phInput" min="0" max="14" step="0.1" required />
     <br><br>
 
-    <label for="tdsInput">Soil Moisture Level (analog):</label>
-    <input type="number" id="tdsInput" name="tdsInput" min="0" step="0.01" required />
+    <label for="moistureInput">Soil Moisture Level (analog):</label>
+    <input type="number" id="moistureInput" name="moistureInput" min="0" step="0.01" required />
     <br><br>
 
     <label for="nitrogen">Available Nitrogen in soil (mg/kg):</label>
@@ -159,7 +159,7 @@
       </p>
 
       <p>
-        TDS Check: <span id="tds"></span>
+        Moisture Check: <span id="moisture"></span>
       </p>
 
       <p>
@@ -185,9 +185,9 @@
         Potassium Fertilizer Cost: ₹<span id="displayTotalPotassiumCost"></span>
       </p>
 
-      <p>
+      <!--<p>
         Estimated Seed Cost: ₹<span id="seedCost"></span>
-      </p>
+      </p>-->
 
       <p>Estimated Cost: ₹<span id="displayTotalCost"></span></p>
 
