--- a/forum/index.html
+++ b/forum/index.html
@@ -21,6 +21,7 @@
                     <ul id="tools-dropdown-content" class="dropdown-content">
                         <li><a href="/soilcalculator/">Soil Calculator</a></li>
                         <li><a href="/forum/">Khetu Forum</a></li>
+                        <li><a id="marketplaceLink" href="/marketplace/">Marketplace</a></li>
                     </ul>
                 </li>
                 <li class="right"><a href="#">हिंदी में देखें</a></li>
