--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <ul id="tools-dropdown-content" class="dropdown-content">
             <li><a id="soilcalculatorlink" href="/soilcalculator/">Soil Calculator</a></li>
             <li><a id="forumlink" href="/forum/">Khetu Forum</a></li>
+            <li><a id="marketplaceLink" href="/marketplace/">Marketplace</a></li>
           </ul>
         </li>
         <li class="right"><a id="hindiButton" href="#">हिंदी में देखें</a></li>
