--- a/soilcalculator/index.html
+++ b/soilcalculator/index.html
@@ -21,6 +21,7 @@
           <ul id="tools-dropdown-content" class="dropdown-content">
             <li><a href="/soilcalculator/">Soil Calculator</a></li>
             <li><a href="/forum/">Khetu Forum</a></li>
+            <li><a id="marketplaceLink" href="/marketplace/">Marketplace</a></li>
           </ul>
         </li>
         <li class="right"><a href="#">हिंदी में देखें</a></li>
@@ -29,7 +30,7 @@
     </nav>
   </header>
   <h1>Soil Calculator</h1>
-  <form action="insert.php" method="POST" name="SoilSensorValues">
+  <form name="SoilSensorValues">
     <table>
 
       <label for="email">Email:</label>
@@ -178,8 +179,7 @@
           Potassium Fertilizer Cost: ₹<span id="displayTotalPotassiumCost"></span>
         </p>
 
-        <p>
-          Estimated Seed Cost: ₹<span id="seedCost"></span>
+        <p><span id="seedCost"></span>
         </p>
 
         <p>Estimated Cost: ₹<span id="displayTotalCost"></span></p>
